<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".auth.uploadProfile.UploadProfileFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/white"
        android:contentDescription="@string/upload_profile_image"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_chettan"
        android:text="@string/upload_your_profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/circleImageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="40dp"
        android:padding="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/baseline_account_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/Circular"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/btnback"
        android:fontFamily="@font/baloo_chettan"
        android:maxWidth="320dp"
        android:text="@string/upload_profile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        app:layout_constraintVertical_bias="0.07999998"
        app:layout_constraintWidth_max="320dp" />

    <ImageButton
        android:id="@+id/goGalleryBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/upload_image"
        android:labelFor="@id/goGalleryBtn"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_camera_alt_24"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintEnd_toEndOf="@+id/circleImageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
         />

    <TextView
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="or"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/baloo_chettan"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skip_btn"
        android:layout_width="0dp"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btnback"
        android:fontFamily="@font/baloo_chettan"
        android:maxWidth="320dp"
        android:text="@string/upload_later"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_max="320dp" />



</androidx.constraintlayout.widget.ConstraintLayout>